Adding the translations

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -6,6 +6,8 @@ ar:
         email: NOTRANSLATE
         message: NOTRANSLATE
         name: NOTRANSLATE
+      offer:
+        organizations: 
       search_location:
         latitude: NOTRANSLATE
         longitude: NOTRANSLATE
@@ -323,6 +325,10 @@ ar:
         send: ارسال
         send_us_a_message: اكتب لنا رسالة
   day_and_night: 
+  de:
+    en:
+      conf: 
+      current_location: 
   emails:
     offers_index:
       family:
@@ -362,6 +368,9 @@ ar:
       success_html: |
         لقد قمت بنجاح بإلغاء تسجيلك من الحصول على إشعارات أخرى
         (<a href="%{subscribe_href}">إعادة التسجيل</a>)
+  en:
+    conf:
+      current_location: 
   enumerize:
     search_form:
       age:
@@ -478,6 +487,7 @@ ar:
         amh: Amh
         ara: Ara
         arc: Arc
+        arm: Arm
         aze: Aze
         bam: Bam
         ban: Ban
@@ -491,15 +501,18 @@ ar:
         cpe: Cpe
         cus: Cus
         cze: Cze
+        dan: Dan
         deu: Deu
         dyu: Dyu
         ell: Ell
         eng: Eng
         ewo: Ewo
         fas: Fas
+        fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        hau: Hau
         hbs: Hbs
         heb: Heb
         hin: Hin
@@ -511,11 +524,13 @@ ar:
         kor: Kor
         kur: Kur
         lav: Lav
+        lin: Lin
         lit: Lit
         ltz: Ltz
         luo: Luo
         man: Man
         mkd: Mkd
+        mos: Mos
         msa: Msa
         mul: Mul
         nor: Nor
@@ -552,12 +567,6 @@ ar:
         wol: Wol
         zho: Zho
         zza: Zza
-        arm: 
-        dan: 
-        fil: 
-        hau: 
-        lin: 
-        mos: 
       section:
         family: Family
         refugees: Refugees
@@ -714,6 +723,7 @@ ar:
         amh: لغة أمهرية - አማርኛ
         ara: " لغة عربية - عربي"
         arc: لغة آرامية - ארמית / Arāmît
+        arm: لغة أرمنية - Հայերեն / Hajeren
         aze: لغة أذرية - Azərbaycan
         bam: البامبارا - Bamanankan
         ban: لغة بالية - Basa Bali
@@ -722,20 +732,27 @@ ar:
         ber: لغة أمازيغية - Tamaziɣt
         bos: لغة بوسنوية - bosanski
         bul: لغة بلغارية - български
+        bur: البورمية - မြန်မာစာ
         cau: لغة أباظية - абаза бызшва
         ckb: لهجة كردية سورانية - سۆرانی
         cpe: الكاميروني - Pidgin
         cus: لغة ساهو - ሳሆኛ
         cze: لغة تشيكية - čeština
+        dan: لغة دنماركية - Dansk
         deu: لغة ألمانية - Deutsch
         dyu: الديولا - Julakan
         ell: لغة يونانية - ελληνικά
         eng: لغة إنجليزية - English
+        est: الإستونية - eesti keel
         ewo: إيفوندو - Ewondo
         fas: لغة فارسية - فارسی
+        fil: لغة فلبينية - Wikang Filipino
         fin: لغة فنلندية - suomi
         fra: لغة فرنسية - Français
         fuf: Pular - Pular
+        ful: Ful - Fulfulde
+        geo: الجورجية - ქართული
+        hau: لغة هوسية - Hausanci
         hbs: لغة مونتنغرية - Crnogorski jezik / Црногорски језик
         heb: " لغة عبرية - עברית"
         hin: لغة هندية - हिन्दी
@@ -747,11 +764,13 @@ ar:
         kor: لغة كورية - 한국말 / 조선말
         kur: " لغة كردية - کوردی"
         lav: لغة لاتفية - latviešu
+        lin: لغة لينغالا - Ngála
         lit: لغة ليتوانية - lietuvių
         ltz: لغة لوكسمبورغية - Lëtzebuergesch
         luo: لوو - Dholuo
         man: " الغيلية - Maninka"
         mkd: لغة مقدونية - македонски
+        mos: لغة موريه - Moose
         msa: لغة ملايو – بهاس ملايو
         mul: لغات أخرى عند الطلب
         nor: لغة نرويجية - Norsk
@@ -762,6 +781,7 @@ ar:
         rom: لغة رومنية - Romani
         ron: لغة رومانية - română
         rus: لغة روسية - русский
+        sdh: الكورمانجية - كورمانجى / Kurmancî
         skr: لغة صربية كرواتية - српскохрватски / hrvatskosrpski
         slo: لغة سلوفاكية - slovenský jazyk
         slv: سلوفيني - Slovenščina
@@ -770,6 +790,7 @@ ar:
         spa: لغة إسبانية - español
         sqi: لغة ألبانية - Shqipja
         srp: لغة صربية - српски
+        sus: Susu - Sosoxui
         swa: لغة سواحلية - Kiswahili
         swe: لغة سويدية - svenska
         tam: لغة تاميلية - தமிழ்
@@ -786,14 +807,9 @@ ar:
         uzb: لغة أوزبكية - Oʻzbek tili
         vie: لغة فيتنامية - tiếng Việt
         wol: لغة ولوفية - wɔlɔf
+        xxx: لغة الإشارة المرافقة - speech-acc. gestures
         zho: لغة صينية - 普通话 / 普通話
         zza: لغة زازاكية - Zazaki / Kırmancki
-        arm: لغة أرمنية - Հայերեն / Hajeren
-        dan: لغة دنماركية - Dansk
-        fil: لغة فلبينية - Wikang Filipino
-        hau: لغة هوسية - Hausanci
-        lin: لغة لينغالا - Ngála
-        mos: لغة موريه - Moose
     shariff:
       share_label: مشاركة
     single_search_result:
@@ -845,8 +861,11 @@ ar:
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
       nav_lang:
-        legal_title: On clarat, legal text can only be read in German
-        title: 
+        legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
+        title: |2-
+           ترجمة آلية!
+          <br><br>
+          بعض النصوص في كلارات مترجمة عن طريق جوجل. هذه النصوص تبدو أحياناً غريبة أو بها أخطاء لغوية. لكننا نقوم حالياً بتحسين الترجمة.
       navigation:
         category_headline: أو البحث عن طريق التصنيف
         claim:
@@ -885,6 +904,8 @@ ar:
       target_audience:
         family_acquaintances: 
         refugees_adolescents: 
+    validations:
+      only_visible_organizations: 
   offers:
     index:
       filters:
@@ -984,6 +1005,9 @@ ar:
           charged: ذو تكلفة
           confidential: سري
           day_and_night: ليلاً ونهاراً
+          family_nuclear_family: 
+          family_parents: 
+          family_relatives: 
           free: مجاني
       trait_filters_headline: 
       website_section:
