--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -6,6 +6,8 @@ tr:
         email: NOTRANSLATE
         message: NOTRANSLATE
         name: NOTRANSLATE
+      offer:
+        organizations: 
       search_location:
         latitude: NOTRANSLATE
         longitude: NOTRANSLATE
@@ -352,6 +354,10 @@ tr:
         send: gönder
         send_us_a_message: Bize mesaj gönder
   day_and_night: 
+  de:
+    en:
+      conf: 
+      current_location: 
   emails:
     offers_index:
       family:
@@ -380,6 +386,9 @@ tr:
       success_html: |
         E-bülten aboneliğinden başarıyla çıktın.
         (<a href="%{subscribe_href}">tekrar abone ol</a>)
+  en:
+    conf:
+      current_location: 
   enumerize:
     search_form:
       age:
@@ -496,6 +505,7 @@ tr:
         amh: Amh
         ara: Ara
         arc: Arc
+        arm: Arm
         aze: Aze
         bam: Bam
         ban: Ban
@@ -509,15 +519,18 @@ tr:
         cpe: Cpe
         cus: Cus
         cze: Cze
+        dan: Dan
         deu: Deu
         dyu: Dyu
         ell: Ell
         eng: Eng
         ewo: Ewo
         fas: Fas
+        fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        hau: Hau
         hbs: Hbs
         heb: Heb
         hin: Hin
@@ -529,11 +542,13 @@ tr:
         kor: Kor
         kur: Kur
         lav: Lav
+        lin: Lin
         lit: Lit
         ltz: Ltz
         luo: Luo
         man: Man
         mkd: Mkd
+        mos: Mos
         msa: Msa
         mul: Mul
         nor: Nor
@@ -570,12 +585,6 @@ tr:
         wol: Wol
         zho: Zho
         zza: Zza
-        arm: 
-        dan: 
-        fil: 
-        hau: 
-        lin: 
-        mos: 
       section:
         family: Family
         refugees: Refugees
@@ -723,6 +732,7 @@ tr:
         amh: Amharca - አማርኛ
         ara: Arapça - عربي
         arc: Aramice - ארמית / Arāmît
+        arm: Ermenice - Հայերեն / Hajeren
         aze: Azerice - Azərbaycan
         bam: Bambara - Bamanankan
         ban: Bali dili - Basa Bali
@@ -731,20 +741,27 @@ tr:
         ber: Berberi dilleri - Tamaziɣt
         bos: Boşnakça - bosanski
         bul: Bulgarca - български
+        bur: Birmanyalı - မြန်မာစာ
         cau: Abazaca - абаза бызшва
         ckb: Soranice - سۆرانی
         cpe: Kamtok - Pidgin
         cus: Saho - ሳሆኛ
         cze: Çekçe - čeština
+        dan: Danimarka - Dansk
         deu: Almanca - Deutsch
         dyu: Jula - Julakan
         ell: Yunanca - ελληνικά
         eng: İngilizce - English
+        est: Estonyalı - eesti keel
         ewo: Ewondo - Ewondo
         fas: Farsça - فارسی
+        fil: Filipince - Wikang Filipino
         fin: Fince - suomi
         fra: Fransızca - Français
         fuf: Pular - Pular
+        ful: Ful - Fulfulde
+        geo: Gürcü - ქართული
+        hau: Hausa - Hausanci
         hbs: Karadağca - Crnogorski jezik / Црногорски језик
         heb: İbranice - עברית
         hin: Hintçe - हिन्दी
@@ -756,11 +773,13 @@ tr:
         kor: Korece - 한국말 / 조선말
         kur: Kürtçe - کوردی
         lav: Letonca - latviešu
+        lin: Lingaca - Ngála
         lit: Litvanca - lietuvių
         ltz: Lüksemburgca - Lëtzebuergesch
         luo: Luo - Dholuo
         man: Maninka - Maninka
         mkd: Makedonca - македонски
+        mos: Geyik - Moose
         msa: Malayca – بهاس ملايو
         mul: Talep üzerine diğer diller
         nor: Norveççe - Norsk
@@ -771,6 +790,7 @@ tr:
         rom: Çingenece - Romani
         ron: Rumence - română
         rus: Rusça - русский
+        sdh: Kurmanci - كورمانجى / Kurmancî
         skr: Sırp-Hırvatça - српскохрватски / hrvatskosrpski
         slo: Slovakça - slovenský jazyk
         slv: Slovence - Slovenščina
@@ -779,6 +799,7 @@ tr:
         spa: İspanyolca - español
         sqi: Arnavutça - Shqipja
         srp: Sırpça - српски
+        sus: Susu - Sosoxui
         swa: Svahili - Kiswahili
         swe: İsveççe - svenska
         tam: Tamilce - தமிழ்
@@ -795,14 +816,9 @@ tr:
         uzb: Özbekçe - Oʻzbek tili
         vie: Vietnamca - tiếng Việt
         wol: Wolof - wɔlɔf
+        xxx: eşlik eden işaret dili - speech-acc. gestures
         zho: Çince - 普通话 / 普通話
         zza: Zazaca - Zazaki / Kırmancki
-        arm: Ermenice - Հայերեն / Hajeren
-        dan: Danimarka - Dansk
-        fil: Filipince - Wikang Filipino
-        hau: Hausa - Hausanci
-        lin: Lingaca - Ngála
-        mos: Geyik - Moose
     shariff:
       share_label: 
     single_search_result:
@@ -851,7 +867,7 @@ tr:
           Mesela E-Mail yolu ve ya online sohbette yardım edilecektir. Bulunduğun yerde de yardım alabildiğinde, seni
           memnuniyetle bilgilendireceğiz. Bunun için E-Mail adresini buraya yazabilirsin.
       nav_lang:
-        legal_title: On clarat, legal text can only be read in German
+        legal_title: Clarat'ta, yasal metin yalnızca Almanca'da okunabilir.
         title: 
       navigation:
         category_headline: Kategoriler arasında ara
@@ -891,6 +907,8 @@ tr:
       target_audience:
         family_acquaintances: 
         refugees_adolescents: 
+    validations:
+      only_visible_organizations: 
   offers:
     index:
       filters:
@@ -987,6 +1005,9 @@ tr:
           charged: 
           confidential: 
           day_and_night: 
+          family_nuclear_family: 
+          family_parents: 
+          family_relatives: 
           free: 
       trait_filters_headline: 
       website_section:
