--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -6,6 +6,8 @@ fa:
         email: NOTRANSLATE
         message: NOTRANSLATE
         name: NOTRANSLATE
+      offer:
+        organizations: 
       search_location:
         latitude: NOTRANSLATE
         longitude: NOTRANSLATE
@@ -393,6 +395,10 @@ fa:
         send: فرستادن
         send_us_a_message: برای ما پیغام بفرست
   day_and_night: 
+  de:
+    en:
+      conf: 
+      current_location: 
   emails:
     offers_index:
       family:
@@ -419,6 +425,9 @@ fa:
         (<a href="%{unsubscribe_href}">wieder abmelden</a>)
     unsubscribe:
       success_html: تو با موفقیت از بخش پیغام ها بعدی خارج شدی(<a href="%{subscribe_href}">wieder anmelden</a>)
+  en:
+    conf:
+      current_location: 
   enumerize:
     search_form:
       age:
@@ -535,6 +544,7 @@ fa:
         amh: Amh
         ara: Ara
         arc: Arc
+        arm: Arm
         aze: Aze
         bam: Bam
         ban: Ban
@@ -548,15 +558,18 @@ fa:
         cpe: Cpe
         cus: Cus
         cze: Cze
+        dan: Dan
         deu: Deu
         dyu: Dyu
         ell: Ell
         eng: Eng
         ewo: Ewo
         fas: Fas
+        fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        hau: Hau
         hbs: Hbs
         heb: Heb
         hin: Hin
@@ -568,11 +581,13 @@ fa:
         kor: Kor
         kur: Kur
         lav: Lav
+        lin: Lin
         lit: Lit
         ltz: Ltz
         luo: Luo
         man: Man
         mkd: Mkd
+        mos: Mos
         msa: Msa
         mul: Mul
         nor: Nor
@@ -609,12 +624,6 @@ fa:
         wol: Wol
         zho: Zho
         zza: Zza
-        arm: 
-        dan: 
-        fil: 
-        hau: 
-        lin: 
-        mos: 
       section:
         family: خانواده
         refugees: پناهندگان
@@ -781,6 +790,7 @@ fa:
         amh: امهری - አማርኛ
         ara: عربی
         arc: زبان آرامی - ארמית / Arāmît
+        arm: زبان ارمنی - Հայերեն / Hajeren
         aze: آذری - Azərbaycan
         bam: بامبارایی - Bamanankan
         ban: زبان بالی- Basa Bali
@@ -789,20 +799,27 @@ fa:
         ber: " بربری - Tamaziɣt"
         bos: بوسنیایی - bosanski
         bul: بلغاری - български
+        bur: برمهای - မြန်မာစာ
         cau: زبان آبازی - абаза бызшва
         ckb: 'سورانی - سۆرانی '
         cpe: کامرونی - Pidgin
         cus: Saho - ሳሆኛ
         cze: چکی - čeština
+        dan: زبان دانمارکی - Dansk
         deu: Deutsch
         dyu: دیولا - Julakan
         ell: یونانی -  ελληνικά
         eng: انگلیسی -  English
+        est: استونیایی - eesti keel
         ewo: اووندو - Ewondo
         fas: فارسی
+        fil: زبان فیلیپینی - Wikang Filipino
         fin: فنلاندی - suomi
         fra: فرانسوی - Français
         fuf: Pular - Pular
+        ful: Ful - Fulfulde
+        geo: گرجی - ქართული
+        hau: هوسى - Hausanci
         hbs: مونتنگرایی - Crnogorski jezik / Црногорски језик
         heb: عبری - עברית
         hin: هندی - हिन्दी
@@ -814,11 +831,13 @@ fa:
         kor: کره ای -  한국말 / 조선말
         kur: کردی - کوردی
         lav: لاتویایی - latviešu
+        lin: زبان لينغالا - Ngála
         lit: لیتوانی - lietuvių
         ltz: لوکزامبورگی - Lëtzebuergesch
         luo: لوآیی - Dholuo
         man: مانینکایی -  Maninka
         mkd: مقدونیه ای - македонски
+        mos: Mossi - Moose
         msa: زبان مالایی – بهاس ملايو
         mul: بقیه زبانها با توجه به درخواست
         nor: نروژی - Norsk
@@ -829,6 +848,7 @@ fa:
         rom: رومانی - Romani
         ron: رومانیایی -  Romani
         rus: روسی - русский
+        sdh: كورمانجى - كورمانجى / Kurmancî
         skr: صربستانی -  српскохрватски / hrvatskosrpski
         slo: اسلواکی - slovenský jazyk
         slv: اسلوونیایی - Slovenščina
@@ -837,6 +857,7 @@ fa:
         spa: اسپانیایی - español
         sqi: آلبانی - Shqipja
         srp: صربستانی -  српски
+        sus: Susu - Sosoxui
         swa: سواحیلی -  Kiswahili
         swe: سوئدی - svenska
         tam: " تامیلی - தமிழ்"
@@ -853,14 +874,9 @@ fa:
         uzb: ازبکی - Oʻzbek tili
         vie: ویتنامی - tiếng Việt
         wol: ولفی - wɔlɔf
+        xxx: زبان اشاره همراه - speech-acc. gestures
         zho: چینی - 普通话 / 普通話
         zza: دیملی -  Zazaki / Kırmancki
-        arm: زبان ارمنی - Հայերեն / Hajeren
-        dan: زبان دانمارکی - Dansk
-        fil: زبان فیلیپینی - Wikang Filipino
-        hau: هوسى - Hausanci
-        lin: زبان لينغالا - Ngála
-        mos: Mossi - Moose
     shariff:
       share_label: تقسیم کردن
     single_search_result:
@@ -902,8 +918,11 @@ fa:
           text: صفحه اینترنتی ما clarat.org جدید می باشد.در برلین می توانی پیشنهاد های کمکی زیادی را جستجو کنی.به زودی پیشنهاد های کمکی برای شهرهای دیگر را نیز جمع آوری می کنیم.از کمک شما استقبال می کنیم:آیا چیزی را دیدی که ما بهتر می توانیم آن را ارائه دهیم یا اینکه چیزی به درستی انجام نمی شود؟پس
         unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
       nav_lang:
-        legal_title: On clarat, legal text can only be read in German
-        title: 
+        legal_title: در  clarat متن های قانونی فقط به زبان آلمانی قابل خواندن هستند.
+        title: |-
+          ترجمه خودکار!
+          <br><br>
+          در  clarat بعضی از متون به زبان مادری شما، توسط Google Translate ترجمه شده است.این متون گاهی اوقات عجیب و قریب به نظر می آیند و یا زبان ترجمه ممکن است کمی اشتباه باشد.
       navigation:
         category_headline: " جستجو از طریق طبقه بندی ها"
         claim:
@@ -938,6 +957,8 @@ fa:
       target_audience:
         family_acquaintances: 
         refugees_adolescents: 
+    validations:
+      only_visible_organizations: 
   offers:
     index:
       filters:
@@ -1030,6 +1051,9 @@ fa:
           charged: هزینه الزامی
           confidential: محرمانه
           day_and_night: شبانه روزی
+          family_nuclear_family: 
+          family_parents: 
+          family_relatives: 
           free: رایگان
       trait_filters_headline: 
       website_section:
@@ -1144,14 +1168,52 @@ fa:
       title: در مورد ما
       verena: او کارشناس مسائل سیاسی است.این بدین معنی است که او اطلاعات زیادی در مورد سیاست و اجتماع دارد.او به خوبی می تواند اطلاعات جمع آوری کند.در clarat در تیم تحقیقات و فرهنگ لغت فعالیت دارد.موسیقی مورد علاقه او Lose It از Oh Wonder می باشد.
     agb:
-      heading: اطلاعات قانونی
+      heading: Rechtliche Hinweise
       text_html: |-
-        این وبسایت با دقت زیادی طراحی شده است.clarat gGmbH با این حال در مورد اطلاعات٬صحت٬به روز بودن و در دسترس بودن مطالب ولینک ها هیچ ضمانتی ندارد.این وبسایت یرای دسترسی شخصی طراحی شده و استفاده تجاری از آن ممنوع می باشد.</p>
-        <p>ما پیشاپیش اشاره میکنیم که اطلاعات وب‌سایت ممکن است دقیق نباشد یا اشتباهاتی را در برگیرد که ما مسئولیتی را در این مورد نمی‌پذیریم.ما همچنین اشاره می کنیم به این موضوع که مسئولیت خدمات و اطلاعاتی که با توجه به نیاز شما از وبسایت ما دریافت می کنید بر عهده شخص شما می باشد.استفاده از اطلاعات وبسایت ما همچنین هیچ فعالیتی در مورد حقوق قانونی شما ندارد و همه مسئولیت ها بر عهده شخص شماست.</p>
-        <p>محتوی وبسایت clarat توسط خود ما و یا برای ما طراحی شده است.هرگونه سواستفاده و استفاده از آن بدون اطلاع ما از مطالب ما با توجه که مطالب در انحصار ما می باشد ممنوع بوده و پیگرد قانونی در بر خواهد داشت و ما به آن اعتراض خواهیم کرد.</p>
-        <p> به لینک ها و وبسایت ها و دومین هایی که از طریق ما به آن دسترسی پیدا می کنید٬در مورد اطلاعات آنها هیچ مسئولیتی متوجه ما نخواهد بود و ضمانت آنها بر عهده ما نیست.</p>
-        <p>اطلاعات٬ سئوالات و اشاره به مطالب در این وبسایت با توجه به در نظر گرفتن قوانین جمهوری فدرال آلمان طراحی و در دسترس قرار گرفته شده است.</p>
-      title: اطلاعات حقوقی
+        <p>
+        Diese Webseite wurde mit größtmöglicher Sorgfalt erstellt. Die clarat gGmbH („clarat“ oder „wir“) übernimmt jedoch keine Gewähr in
+        Bezug auf die Vollständigkeit, die Aktualität, die Verfügbarkeit sowie
+        die Richtigkeit der auf dieser Webseite angebotenen Informationen und
+        Links. Die Webseite ist ausschließlich für den privaten Gebrauch
+        bestimmt, eine Nutzung zu eigenen kommerziellen Zwecken ist unzulässig.
+        </p>
+        <p>
+        Wir weisen vorsorglich darauf hin, dass die Informationen auf der
+        Webseite Ungenauigkeiten und Fehler enthalten können und dass eine
+        Haftung für solche Ungenauigkeiten oder Fehler grundsätzlich
+        ausgeschlossen ist. Wir weisen ferner ausdrücklich darauf hin, dass es
+        in Ihrer eigenen Verantwortung liegt, sicherzustellen, dass die
+        Serviceleistungen oder Informationen, die Sie über unsere Webseite
+        beziehen, Ihren speziellen Anforderungen genügen. Die Informationen auf
+        unserer Webseite stellen keine rechtlichen Zusicherungen dar und es
+        können aus ihnen keine Rechtsansprüche abgeleitet werden.
+        </p>
+        <p>
+        Die Webseite kann jederzeit ohne Benachrichtigung geändert werden.
+        </p>
+        <p>
+        Die Inhalte der Webseite wurden von oder für clarat erstellt. Das
+        Urheberrecht und sonstige Schutzrechte an den Inhalten unserer Webseite
+        stehen clarat oder demjenigen zu, der uns daran Nutzungsrechte
+        eingeräumt hat. Dies bezieht sich unter anderem, aber nicht
+        ausschließlich, auf das Design, das Layout, die Texte sowie Abbildungen,
+        Bilder und Grafiken. Wir widersprechen einer vollständigen oder
+        teilweisen Speicherung, Vervielfältigung und/oder Veröffentlichung und
+        behalten uns rechtliche Schritte vor, sofern eine solche ohne unsere
+        Genehmigung erfolgt.
+        </p>
+        <p>
+        Soweit auf andere Domains oder Webseiten hingewiesen oder mittels eines
+        Hyperlinks verlinkt wird, sind wir für den Inhalt solcher Webseiten
+        nicht verantwortlich, übernehmen dafür keine Gewähr und machen uns den
+        Inhalt solcher Webseiten nicht zu Eigen.
+        </p>
+        <p>
+        Die rechtlichen Hinweise auf dieser Webseite sowie alle Fragen und
+        Streitigkeiten im Zusammenhang mit dieser Webseite unterliegen dem Recht
+        der Bundesrepublik Deutschland.
+        </p>
+      title: Rechtliche Hinweise
     faq:
       title: سوالات رایج
     home:
@@ -1187,13 +1249,13 @@ fa:
       title: 404
     privacy:
       chapter_eight:
-        heading: حقوق اعتراض و مسئول مربوطه
-        nested_text_first_paragraph: اگر به طرز استفاده و خدمات آنالیز وب از Optimizely اعترض دارید٬می تونید لینک %{optimizely_optout} را دنبال کنید.
-        nested_text_second_paragraph: سوالات خود در مورد حفاظت از اطلاعات٬اعتراض داشتن٬راهنمایی جهت حذف٬شکایت و غیره را به ما اعلام کنید.
-        text: 
+        heading: 8. Recht auf Widerspruch und Ansprechpartner
+        nested_text_first_paragraph: 'Um der Verwendung des Webanalysedienstes von Optimizely zu widersprechen, können Sie folgendem Link folgen: %{optimizely_optout}.'
+        nested_text_second_paragraph: 'Ihre Fragen zum Datenschutz, Widersprüche, Auskunfts- oder Löschungsbegehren, Beschwerden oder Ähnliches richten Sie bitte an:'
+        text: 'Sie haben jederzeit das Recht der oben beschriebenen Verwendung Ihrer Daten zu widersprechen und/oder Ihre erteilte Einwilligung mit Wirkung für die Zukunft zu widerrufen. Außerdem haben Sie die Möglichkeit der Verwendung von Google Analytics zu widersprechen, indem Sie auf den folgenden Link klicken: %{google_optout}.'
       chapter_five:
-        heading: افزایه های شبکه اجتماعی
-        nested_text_four: ما همچنین در وبسایت خود فضایی برای فعال کردن اطلاعات از طریق  شرکت WhatsApp Inc. 650 Castro Street, Suite 120-219, Mountain View, CA 94041, USA („WhatsApp“) دایر کرده ایی که از این طریق می توانید دیگران را از این راه ارتباطی از اطلاعات وبسایت ما آگاه کنید و عملکرد آن از طریق لینک قانونی (HTML-Hyperlink) انجام می شود و فقط با موافقت و فعال کردن شخص شما اطلاعاتی که شما با دیگران به اشتراک گذاشته اید در WhatsApp ذخیره میشوند.
+        heading: 5. Social Media Plugins
+        nested_text_four: Wir setzen auf unserer Website zudem eine Schaltfläche der WhatsApp Inc. 650 Castro Street, Suite 120-219, Mountain View, CA 94041, USA („WhatsApp“) ein. Mit Hilfe dieser Schaltfläche können Sie Inhalte unserer Website an Dritte kommunizieren. Die Schaltfläche entspricht in ihrer Funktion einem regulären Weblink (HTML-Hyperlink). Das bedeutet, dass beim Aufruf der Schaltfläche noch keine Daten von Ihnen an WhatsApp übermittelt werden. Erst wenn Sie die Schaltfläche aktivieren, erfährt WhatsApp welchen Inhalt Sie über WhatsApp teilen möchte und dass die Schaltfläche von unserer Website aus aufgerufen wurde.
         nested_text_one: ما Pluginsهایی از  شبکه اجتمایی فیسبوک ("Facebook") که در Facebook Inc., 1601 S. California Ave, Palo Alto, CA 94304, USA واقع شده است٬استفاده می کنیم.به این طریق که در ابتدا با دکمه درخواستی و باز شدن صفحه دیگری که شما باید مشخصات فیسبوک خود را وارد کنید تا بتوانید مطالب صفحه ما را برای دوستان خود به اشتراک بگذارید.همزمان در سیستم شما Facebook-Cookie فعال شده و فیسبوک از این طریق اطلاعاتی از قبیل IP-Adresse و Cookie-ID شما را بدست می آورد.این امکان فقط در صورت کلیک کردن دکمه به اشتراک گذاشتن در فیسبوک می افتد.در این صورت اطلاعات به فیسبوک انتقال داده می شود و دیگران مشاهده خواهند کرد که شما به آنها ما را پیشنهاد می کنید.جه کسانی این اطلاعات را بدست می آورند بستگی به آن دارد که در قسمت تنظیمات فیسبوک خود چه تغییراتی را داده اید.برای کسب اطلاعات بیشتر و استفاده اطلاعات توسط فیسبوک و همچنین حقوق شما در مورد حفاظت از اطلاعات می توانید به اطلاعات داده شده توسط فیسبوک مراجعه کنید(%{facebook}).
         nested_text_three: ما Pluginsهایی از  شبکه اجتمایی توییتر  (Inc., 795 Folsom St., Suite 600, San Franscisco, CA 94107, USA („Twitter“) استفاده میکنیم که اگر یر روی Twitter  کلیک کنید٬پنجره های باز می شود که از شما می خواهد آدرس و مشخصات توییتر خو را وارد کنید.در این صورت Twitter-Cookie ها در کامپیوتر شما فعال می شوند و این در صورتی است که شما با پس ورد و نام کاربری خود در توییتر logg in شده باشید و آن را وارد کرده باشید که در اینصورت اطلاعات شما مانند IP-Adresse und die Cookie-ID به توییتر انتقال داده می شود.برای اطلاعات بیشتر در مورد نحوه استفاده از به اشتراک گذاشتن و حقوق قانونی و حفاظت از اطلاعات شخصی می توانید به اطلاعات داده شده توسط Twitter مراجعه کنید.(%{twitter}).
         nested_text_two: ما Pluginsهایی از  شبکه اجتمایی گوگل استفاده میکنیم که اگر بر رویGoogle+1 کلیک کنید٬ پنجره های باز می شود که از شما می خواهد آدرس و مشخصات گوگل خو را وارد کنید.در این صورت Google-Cookie ها در کامپیوتر شما فعال می شوند و این در صورتی است که شما با پس ورد و نام کاربری خود در گوگل logg in شده باشید و آن را وارد کرده باشید که در اینصورت اطلاعات شما مانند IP-Adresse und die Cookie-ID به گوگل انتقال داده می شود.برای اطلاعات بیشتر در مورد نحوه استفاده از به اشتراک گذاشتن و حقوق قانونی و حفاظت از اطلاعات شخصی می توانید به اطلاعات داده شده توسط گوگل مراجعه کنید(%{google}).
@@ -1237,10 +1299,10 @@ fa:
         nested_title_three: 'اطلاعات موقعیتی '
         nested_title_two: ثبت نام در مجله اطلاعاتی
         text: اگر اطلاعات خود را از طریق ثبت نام در مجله اطلاعاتی ما و یا از طریق  Live-Chat بصورت دلخواه مانند نام٬آدرس محل سکونت٬تلفن٬ایمیل٬کدپستی به ما داده باشید٬ما از آنها جهت ارسال با توجه به موضوعی که شما درخواست کمک دارید خدمات خود را برای پاسخگویی به شما و یا فرستادن مجله اطلاعاتی از طریق ایمیل استفاده میکنیم.
-      heading: حفاظت از اطلاعات
-      intro_first_part: ما خیلی خوشحالیم از اینکه صفحه ما www.clarat.org و clarat gGmbH مورد جلب توجه شما قرار گرفته است.حفاظت از اطلاعات شخصی شما را ما جدی می گیریم.بدیهی است که ما اطلاعات مربوط به هر شخصی را در انحصار چارچوب قوانین حفاظتی آلمان رعایت و از آن بکار می گیریم.
-      intro_second_part: در ادامه شما را از روش٬هدف استفاده از اطلاعات شخصی فرد متقاضی آگاه خواهیم کرد.شما می توانید اطلاعات بیشتر در این ضمینه را از وبسایت ما بازخوانی کنید.clarat gGmbH آگاهی دادن در تغییرات اطلاعات را مشروط می داند.اگر پس از مدت طولانی از وبسایت ما دوباره بازدید می کنید به شما توصیه می شود مجدد موارد مربوط به حفاظت اطلاعات شخصی خود را فراخوانید.
-      title: حفاظت از اطلاعات
+      heading: Datenschutzhinweise
+      intro_first_part: Wir freuen uns über Ihr Interesse an unserer Webseite www.clarat.org und an der clarat gGmbH. Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Selbstverständlich werden wir personenbezogene Daten ausschließlich im Rahmen der geltenden Bestimmungen des deutschen Datenschutzrechts erheben und verwenden.
+      intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
+      title: Datenschutz
     section_choice:
       meta_description: clarat مسائل را از طریق اینترنت و ویشنهادات حمایتی روشن می سازد.برای کودکان٬ جوانان و خانواده‌ها و پناهندگان بصورت آنلاین٬ آسان و در نزدیکی آنها.
       meta_title: clarat شفاف سازی می کند | clarat
