--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -860,6 +860,11 @@ ar:
           مثلا عن طريق اللإيميل أو عن طريق الدردشة
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
+        popup:
+          footer: 
+          headline: 
+          text: 
+          button: 
       nav_lang:
         legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
         title: |2-
