--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1345,6 +1345,11 @@ de:
           Zum Beispiel per E-Mail oder in einem Chat. Wir geben dir gerne
           Bescheid, sobald es bei clarat auch Hilfe in deiner Nähe gibt.
           Trage dazu deine E-Mail-Adresse hier ein.
+        popup:
+          footer: "* Ihr Name und Ihre E-Mail-Adresse werden ausschließlich zur Kontaktaufnahme verarbeitet. Sie abonnieren keinen Newsletter und Ihre E-Mail-Adresse wird nicht an Dritte weitergegeben."
+          headline: 20 Euro für Ihre Gedanken
+          text: Wir würden gern mit Ihnen sprechen. Um Clarat zu verbessern. Haben Sie Interesse?
+          button: Ja, warum nicht!
       nav_lang:
         legal_title: 
         title: 
@@ -1505,6 +1510,8 @@ de:
       what:
         code_word: 'So heißt die Hilfe beim Anbieter:'
         heading: Worum geht's?
+        offertaxonomy:
+          heading: 'Dieses Angebot hilft dir bei:'
       who: Wo bekommst du diese Hilfe?
       who_contact_people:
         dr: Dr.
