--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -927,7 +927,7 @@ fa:
         title: |-
           ترجمه خودکار!
           <br><br>
-          در  clarat بعضی از متون به زبان مادری شما، توسط Google Translate ترجمه شده است.این متون گاهی اوقات عجیب و قریب به نظر می آیند و یا زبان ترجمه ممکن است کمی اشتباه باشد.
+          در کلارات بعضی از متون به زبان مادری شما، توسط گوگل ترجمه شده است.این متون گاهی اوقات عجیب و قریب به نظر می آیند و یا زبان ترجمه ممکن است کمی اشتباه باشد.
       navigation:
         category_headline: " جستجو از طریق طبقه بندی ها"
         claim:
