fix session cookie bug

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1350,6 +1350,11 @@ de:
           headline: 20 Euro für deine Meinung
           text: Sag uns, was wir verbessern können. Oder was dir gut gefällt. Gern würden wir dazu mit dir telefonieren. Dürfen wir dir eine E-Mail mit den Details schicken?
           button: Ja, bitte
+          message: Ich möchte an der Umfrage teilnehmen
+          email_placeholder: E-Mail-Adresse *
+          name_placeholder: Name *
+          email: 
+          name: 
       nav_lang:
         legal_title: 
         title: 
@@ -1872,11 +1877,14 @@ de:
       html: <abbr title="required">*</abbr>
       mark: "*"
       text: required
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
   subscriptions:
     create:
-      error: 'Bitte gib eine korrekte E-Mail Adresse ein.
-
-'
+      error: 'Bitte gib eine korrekte E-Mail Adresse ein.'
       success: |
         Vielen Dank, wir haben soeben einen Bestätigungslink an deine E-Mail
         Adresse gesendet.
