--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -865,6 +865,11 @@ ar:
           headline: 
           text: 
           button: 
+          message: 
+          email_placeholder: عنوان البريد الإليكتروني *
+          name_placeholder: الإسم *
+          email: 
+          name: 
       nav_lang:
         legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
         title: |2-
@@ -1335,6 +1340,11 @@ ar:
       html: <abbr title="required">*</abbr>
       mark: "*"
       text: required
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
   subscriptions:
     create:
       error: 'من فضلك إدخل عنوان بريد إليكتروني صحيح
