Minor wording und style changes

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1510,7 +1510,7 @@ de:
         code_word: 'So heißt die Hilfe beim Anbieter:'
         heading: Worum geht's?
         offertaxonomy:
-          heading: 'Mit diesen Themen kennen sich die Mitarbeiter aus:'
+          heading: 'Hier kennt man sich aus mit:'
       who: Wo bekommst du diese Hilfe?
       who_contact_people:
         dr: Dr.
